Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Current svn
===========

 o #14970 Added support for all JMX commands for our http/HTML native access, see requirement
   http://www.xmlblaster.org/xmlBlaster/doc/requirements/admin.http.html

 o #14956 changed repository structure for tags/branches and trunk and devorced it from other repositories.
 
 o #14952 RemoteProperties changed: Now new sent properties merge with existing ones
   - setting 'msgUnit.content=set' will overwrite existing remoteProperties (behaves as old version)


Changes for 1.2 [2006-03-13] #14936
===================================

 o #14921 The new JDK14 logging can now be controlled by telnet commands or JMX

 o #14918 Administrative commands
   - Added telnet support for 'session' class specified
   - Fixed Message command access with arguments

 o #14916 Admin-commands: Removed deprecated getNumSubscriptions and getSubscriptionList

 o #14914 Refactored common CORBA classes to org.xmlBlaster.util package

 o #14909 Cluster fixes
   - Setting retries=-1 as a default for remote cluster login
   - Default is now to not disconnect at the remote clusters during shutdown
     The old behavior can be forced by adding a <disconnect/> tag.
   - Bugfix to not forward the '__persistenceId' marker client property from subscribeQos to the remote node
   - Fixed cluster example: Added SubscriptionPersistencePlugin to xmlBlasterPlugins.xml

 o #14874 - #14876 Added XmlBlasterException hook to react customized on XmlBlasterExceptions
   The default implementation (see Main.java) does an immediate exit of xmlBlaster for error codes 
   defined, for example "-xmlBlaster/panicErrorCodes resource.db.unknown,resource.db.unavailable"
   The exit does not shutdown with the RunlevelManager but kills the instance immediately.
   You can add your own hook implementation (here MyHandler.java) with