@@ -330,12 +330,12 @@ and here a minimalistic one:
        <tr>
          <td>copyOnMove</td>
          <td>boolean</td>
-         <td>false</td>
-         <td><b>optional</b>: This flag has only effect if <b>sent</b> or <b>discarted</b> have been defined. If this 
-             flag is false (or not set) then the file will be simply moved (or renamed). This is fast but it does not 
-             work on all systems. Particularly on non-local file systems this is known to fail. Setting this flag to
-             <i>true</i> forces a complete copy/delete of the file. This is slower but works even on file systems
-             mounted remotely like nfs, samba or cifs.
+         <td>true</td>
+         <td><b>optional</b>: This flag has only effect if <b>sent</b> or <b>discarded</b> have been defined. If this 
+             flag is set to false then the file will be simply moved (or renamed). This is fast but it does not 
+             work on all OS systems. Particularly on non-local file systems this is known to fail.
+             Leaving this flag <i>true</i> (default) forces a complete copy/delete of the file.
+             This is slower but works even on file systems mounted remotely like nfs, samba or cifs.
          </td>
        </tr>
      </table>   
