@@ -4,6 +4,10 @@ The "#99999" numbers are Subversion revision numbers.
 Current svn
 ===========
 
+ o #14974 FilePoller: Changed copyOnMove=true as default setting
+
+ o #14973 FilePoller: Fix for case insensitive OS, Fix for failing renameTo
+
  o #14970 Added support for all JMX commands for our http/HTML native access, see requirement
    http://www.xmlblaster.org/xmlBlaster/doc/requirements/admin.http.html
 
